--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       display: none; /* Remove a barra de navegação azul no início */
     }
 
-    .resume-item p {
-      text-align: center; /* Centraliza o texto dentro de .resume-item */
+    .resume-item1 p {
+      text-align: center; /* Centraliza o texto dentro de .resume-item1 */
     }
   </style>
 
@@ -88,7 +88,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Douglas Mendonça</h1>
-      <p>Eu sou <span class="typed" data-typed-items="Administrador Financeiro, Analista de Dados, Cientista de Dados em Formação, Professor Universitário"></span></p>
+      <p><i class="bi bi-caret-right"></i><span class="typed" data-typed-items= "Administrador Financeiro, Analista de Dados, Cientista de Dados em Formação, Professor Universitário"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -337,10 +337,10 @@
     <!-- Item 1: Formação Cientista de Dados -->
     <div class="carousel-item active">
       <div class="container">
-        <div class="row">
+        
           <div class="col-lg-12" data-aos="fade-up">
             <h2 class="resume-title">Formação Cientista de Dados</h2>
-            <div class="resume-item pb-0">
+            <div class="resume-item1 pb-0">
               <h4>Data Science Academy - DSA</h4>
               <h5>Conteúdo da Formação</h5>
               <p><em>SQL Para Análise de Dados e Data Science</em></p>
@@ -363,7 +363,7 @@
         <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
             <h2 class="resume-title">Formação Linguagem Python para Data Science</h2>
-            <div class="resume-item pb-0">
+            <div class="resume-item1 pb-0">
               <h4>Data Science Academy - DSA</h4>
               <h5>Conteúdo da Formação</h5>
               <p><em>Projetos de Análise de Dados com Linguagem Python</em></p>
@@ -382,7 +382,7 @@
         <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
             <h2 class="resume-title">Project Management Full Stack</h2>
-            <div class="resume-item pb-0">
+            <div class="resume-item1 pb-0">
               <h4>Escola DNC</h4>
               <h5>Conteúdo da Formação</h5>
               <p><em>Lean Six Sigma</em></p>
