--- a/app-dre.html
+++ b/app-dre.html
@@ -121,7 +121,7 @@
                 fontes de dados que compõem esse relatório financeiro. O tratamento automatizado dos dados de cada fonte, incluindo 
                 Movimento de Estoques, Conteúdo de Programação, Acompanhamento de Terceirizadas, Faturamento e Impostos, Despesas 
                 Contábeis e Pagamentos, antes realizado manualmente, foi otimizado utilizando o Python, prioritariamente com o 
-                pacote pandas. O tempo médio de processamento e geração do banco de dados da DRE, que anteriormente era de 25 dias, 
+                pacote Pandas. O tempo médio de processamento e geração do banco de dados da DRE, que anteriormente era de 25 dias, 
                 foi reduzido para 5 dias com o aplicativo desenvolvido no pacote Streamlit. Adicionalmente, uma etapa de análise dos 
                 dados foi incorporada ao processo, garantindo a precisão e qualidade das informações antes da produção do relatório 
                 final da DRE. Este projeto demonstra como a automação pode melhorar significativamente a eficiência dos 
