--- a/dash.html
+++ b/dash.html
@@ -88,15 +88,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-dre1.jpg" alt="">
+                  <img src="assets/img/portfolio/dash1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-dre2.jpg" alt="">
+                  <img src="assets/img/portfolio/dash2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-dre3.jpg" alt="">
+                  <img src="assets/img/portfolio/dash3.jpg" alt="">
                 </div>
 
               </div>
@@ -108,24 +108,22 @@
             <div class="portfolio-info">
               <h3>Informação do Projeto</h3>
               <ul>
-                <li><strong>Categoria</strong>: Automação de Processos</li>
-                <li><strong>Cliente</strong>: Master Internet</li>
-                <li><strong>Data do Projeto</strong>: Janeiro, 2024</li>
-                <li><strong>URL do Projeto</strong>: <a href="https://shre.ink/8JpE">https://shre.ink/8JpE</a></li>
+                <li><strong>Categoria</strong>: Dashboards</li>
+                <li><strong>Cliente</strong>: Dados Fictícios </li>
+                <li><strong>Data do Projeto</strong>: Fevereiro, 2024</li>
+                <li><strong>URL do Projeto</strong>: <a href="https://shre.ink/8RF8">https://shre.ink/8RF8</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Detalhes do Projeto</h2>
               <p style="text-align: justify;">
-                O projeto de automação da Demonstração do Resultado do Exercício (DRE) foi desenvolvido para unificar as diferentes 
-                fontes de dados que compõem esse relatório financeiro. O tratamento automatizado dos dados de cada fonte, incluindo 
-                Movimento de Estoques, Conteúdo de Programação, Acompanhamento de Terceirizadas, Faturamento e Impostos, Despesas 
-                Contábeis e Pagamentos, antes realizado manualmente, foi otimizado utilizando o Python, prioritariamente com o 
-                pacote Pandas. O tempo médio de processamento e geração do banco de dados da DRE, que anteriormente era de 25 dias, 
-                foi reduzido para 5 dias com o aplicativo desenvolvido no pacote Streamlit. Adicionalmente, uma etapa de análise dos 
-                dados foi incorporada ao processo, garantindo a precisão e qualidade das informações antes da produção do relatório 
-                final da DRE. Este projeto demonstra como a automação pode melhorar significativamente a eficiência dos 
-                processos internos e liberar recursos para atividades estratégicas.
+                O projeto teve como objetivo o desenvolvimento de um dashboard interativo para analisar os preços da gasolina no Brasil
+                 de 2004 a 2021. Foram utilizados os pacotes Python Streamlit, Plotly Express, Plotly Graph Objects e Pandas para criar 
+                 visualizações dinâmicas. O dashboard apresenta tendências temporais, variações mensais, análises regionais e 
+                 comparações por estado. O objetivo é identificar tendências de longo prazo, flutuações sazonais e variações 
+                 geográficas nos preços da gasolina, auxiliando consumidores e tomadores de decisão. Os dados foram obtidos 
+                 do conjunto "Gas Prices in Brazil" no Kaggle, compilados por Matheus Freitag. Explore o dashboard interativo para 
+                 insights valiosos sobre os preços da gasolina no Brasil e tomada de decisão informada.
               </p>
             </div>
           </div>
