--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img2.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Douglas Mendonça</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/douglasmendonca/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -100,18 +100,17 @@
 
         <div class="section-title">
           <h2>Sobre</h2>
-          <p>Sou um profissional apaixonado por finanças e análise de dados, com uma vasta experiência no mercado. 
-            Como administrador financeiro e analista de dados, ao longo dos anos, desenvolvi habilidades sólidas na gestão estratégica 
-            de recursos financeiros e na interpretação de dados para tomada de decisões assertivas. 
-            Minha jornada profissional tem sido marcada pela busca incessante por excelência e pela capacidade de enfrentar desafios 
-            complexos com criatividade e determinação. Com um olhar analítico afiado e um profundo entendimento das dinâmicas do 
-            mercado, estou sempre empenhado em encontrar soluções inovadoras que impulsionem o sucesso financeiro das organizações.
+          <p>Como um entusiasta de finanças e análise de dados, trago uma vasta experiência no mercado. Como administrador financeiro 
+            e analista, desenvolvi habilidades sólidas na gestão estratégica de recursos e na interpretação de dados para decisões 
+            precisas. Minha trajetória profissional é marcada pela busca constante pela excelência e pela capacidade de enfrentar 
+            desafios com criatividade e determinação. Com um olhar analítico e compreensão das dinâmicas do mercado, estou 
+            comprometido em encontrar soluções inovadoras que impulsionem o sucesso das organizações.
           </p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img3.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Administrador Financeiro &amp; Analista de Dados.</h3>
@@ -134,12 +133,12 @@
               </div>
             </div>
             <p>
-              Atualmente, sou Analista de Dados, apaixonado por transformar números em insights estratégicos. 
-              Com abordagem dinâmica e criativa, busco novos desafios para aplicar minhas habilidades, desvendando padrões ocultos 
-              nos dados e entregando soluções inteligentes para impulsionar o sucesso empresarial. Destaco-me pela consistência, 
-              eficiência e capacidade de sintetizar informações complexas em análises claras e acionáveis. Pronto para enfrentar 
-              desafios corporativos, estou determinado a impulsionar o crescimento e a prosperidade das organizações, 
-              sempre em busca de novos patamares de sucesso através do aprendizado contínuo e da inovação.
+              Atualmente, desempenho o cargo de Analista de Dados, dedicado a extrair insights estratégicos a partir de dados numéricos.
+               Com uma abordagem dinâmica e criativa, busco constantemente desafios que me permitam aplicar minhas habilidades, 
+               identificando padrões e propondo soluções para impulsionar o sucesso empresarial. Destaco-me pela consistência, 
+               eficiência e capacidade de simplificar informações complexas em análises acionáveis. Estou determinado a contribuir 
+               para o crescimento das organizações, sempre em busca de novos patamares de excelência através do aprendizado contínuo e 
+               da inovação.
             </p>
           </div>
         </div>
@@ -343,13 +342,13 @@
             <div class="resume-item1 pb-0">
               <h4>Data Science Academy - DSA</h4>
               <h5>Conteúdo da Formação</h5>
-              <p><em>SQL Para Análise de Dados e Data Science</em></p>
-              <p><em>Matemática e Estatística Aplicada Para Data Science, Machine Learning e IA</em></p>
-              <p><em>Data Science Para Análise Multivariada de Dados</em></p>
-              <p><em>Cloud Computing Data Science com Amazon SageMaker e Microsoft Fabrice</em></p>
-              <p><em>Business Analytics e Machine Learning Para Projetos de Data Science</em></p>
-              <p><em>Modelagem de Séries Temporais e Real-Time Analytics com Apache Spark e Databrickss</em></p>
-              <p><em>Storytelling, Dashboards e Técnicas de Apresentação Para Cientistas de Dados</em></p>
+              <p style="margin: 0;"><em>SQL Para Análise de Dados e Data Science</em></p>
+              <p style="margin: 0;"><em>Matemática e Estatística Aplicada Para Data Science, Machine Learning e IA</em></p>
+              <p style="margin: 0;"><em>Data Science Para Análise Multivariada de Dados</em></p>
+              <p style="margin: 0;"><em>Cloud Computing Data Science com Amazon SageMaker e Microsoft Fabrice</em></p>
+              <p style="margin: 0;"><em>Business Analytics e Machine Learning Para Projetos de Data Science</em></p>
+              <p style="margin: 0;"><em>Modelagem de Séries Temporais e Real-Time Analytics com Apache Spark e Databrickss</em></p>
+              <p style="margin: 0;"><em>Storytelling, Dashboards e Técnicas de Apresentação Para Cientistas de Dados</em></p>
               <p><em>Arquitetura e Implementação de Data Mesh Para Self-Service Analytics</em></p>
               <h6><strong>Status:</strong> Em andamento</h6>
             </div>
@@ -385,13 +384,13 @@
             <div class="resume-item1 pb-0">
               <h4>Escola DNC</h4>
               <h5>Conteúdo da Formação</h5>
-              <p><em>Lean Six Sigma</em></p>
-              <p><em>Green Belt</em></p>
-              <p><em>Scrum</em></p>
-              <p><em>Excel Avançado</em></p>
-              <p><em>Power BI</em></p>
-              <p><em>Análises Estatísticas</em></p>
-              <p><em>Criação de Dashboards</em></p>
+              <p style="margin: 0;"><em>Lean Six Sigma</em></p>
+              <p style="margin: 0;"><em>Green Belt</em></p>
+              <p style="margin: 0;"><em>Scrum</em></p>
+              <p style="margin: 0;"><em>Excel Avançado</em></p>
+              <p style="margin: 0;"><em>Power BI</em></p>
+              <p style="margin: 0;"><em>Análises Estatísticas</em></p>
+              <p style="margin: 0;"><em>Criação de Dashboards</em></p>
               <p><em>Mapeamento de Processo</em></p>
               <h6><strong>Status:</strong> Concluída em 2023</h6>
             </div>
@@ -420,8 +419,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Tudo</li>
               <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">BI</li>
-              <li data-filter=".filter-web">Data Science</li>
+              <li data-filter=".filter-BI">BI</li>
+              <li data-filter=".filter-DS">Data Science</li>
             </ul>
           </div>
         </div>
@@ -438,82 +437,22 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-DS">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/reg.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="DS 1"><i class="bx bx-plus"></i></a>
+                <a href="regressao.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-BI">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/dash.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/dash.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="dash.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -640,11 +579,15 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <<footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy;Copyright <strong><span>Douglas Mendonça</span></strong>
+      <div class="copyright" style="font-size: smaller;">
+        &copy; Copyright <strong><span>Douglas Mendonça</span></strong>
       </div>
+      <div class="additional-line">
+        <hr> <!-- Adicionando uma linha horizontal -->
+      </div>
+    </div>
   </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
