--- a/regressao.html
+++ b/regressao.html
@@ -88,15 +88,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-dre1.jpg" alt="">
+                  <img src="assets/img/portfolio/reg1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-dre2.jpg" alt="">
+                  <img src="assets/img/portfolio/reg2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-dre3.jpg" alt="">
+                  <img src="assets/img/portfolio/reg3.jpg" alt="">
                 </div>
 
               </div>
@@ -108,24 +108,24 @@
             <div class="portfolio-info">
               <h3>Informação do Projeto</h3>
               <ul>
-                <li><strong>Categoria</strong>: Automação de Processos</li>
-                <li><strong>Cliente</strong>: Master Internet</li>
-                <li><strong>Data do Projeto</strong>: Janeiro, 2024</li>
-                <li><strong>URL do Projeto</strong>: <a href="https://shre.ink/8JpE">https://shre.ink/8JpE</a></li>
+                <li><strong>Categoria</strong>: Análise de Regressão</li>
+                <li><strong>Cliente</strong>: Dados Fictícios </li>
+                <li><strong>Data do Projeto</strong>: Dezembro, 2023</li>
+                <li><strong>URL do Projeto</strong>: <a href="https://shre.ink/8EmY">https://shre.ink/8EmY</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Detalhes do Projeto</h2>
               <p style="text-align: justify;">
-                O projeto de automação da Demonstração do Resultado do Exercício (DRE) foi desenvolvido para unificar as diferentes 
-                fontes de dados que compõem esse relatório financeiro. O tratamento automatizado dos dados de cada fonte, incluindo 
-                Movimento de Estoques, Conteúdo de Programação, Acompanhamento de Terceirizadas, Faturamento e Impostos, Despesas 
-                Contábeis e Pagamentos, antes realizado manualmente, foi otimizado utilizando o Python, prioritariamente com o 
-                pacote Pandas. O tempo médio de processamento e geração do banco de dados da DRE, que anteriormente era de 25 dias, 
-                foi reduzido para 5 dias com o aplicativo desenvolvido no pacote Streamlit. Adicionalmente, uma etapa de análise dos 
-                dados foi incorporada ao processo, garantindo a precisão e qualidade das informações antes da produção do relatório 
-                final da DRE. Este projeto demonstra como a automação pode melhorar significativamente a eficiência dos 
-                processos internos e liberar recursos para atividades estratégicas.
+                O projeto de análise de dados para uma empresa de comércio eletrônico em Nova York aborda a decisão estratégica entre 
+                investir em aplicativos móveis ou no website. Utilizando Python e os pacotes Pandas, NumPy, Matplotlib e Seaborn, 
+                exploramos dados fictícios para entender o comportamento dos clientes e suas preferências, além de avaliar a eficácia 
+                de cada plataforma. A análise revela que a fidelização dos clientes e o tempo de associação são fatores cruciais para 
+                impulsionar os gastos. Investir em estratégias para aumentar o tempo de associação dos clientes é recomendado, 
+                juntamente com o aprimoramento do aplicativo móvel, que se mostrou mais eficaz em converter o tempo gasto em compras. 
+                A divisão dos dados em conjuntos de treinamento e teste é fundamental para desenvolver e validar modelos preditivos. 
+                Ao longo do projeto, enfatiza-se a importância de uma abordagem baseada em dados para tomar decisões estratégicas que 
+                impulsionem o crescimento sustentável da empresa.
               </p>
             </div>
           </div>
