--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Administrador Financeiro &amp; Analista de Dados.</h3>
             <p class="fst-italic">
-              Sou um Doutor em Administração com ênfase em Controladoria e Finanças Corporativas, além de graduado em Administração e 
-              Ciências Contábeis. Tenho vasta experiência na área financeira e de gestão.
+              Sou Doutor em Administração com ênfase em Controladoria e Finanças Corporativas, graduado em Administração e 
+              Ciências Contábeis. Tenho vasta experiência na área financeira e gestão.
             </p>
             <div class="row">
               <div class="col-lg-6">
