--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/reg.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="DS 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/reg.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="DS 1"><i class="bx bx-plus"></i></a>
                 <a href="regressao.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -451,8 +451,18 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dash.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/dash.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/dash.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="BI 1"><i class="bx bx-plus"></i></a>
                 <a href="dash.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-BI">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/limp1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/limp1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="BI 2"><i class="bx bx-plus"></i></a>
+                <a href="limpeza.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
