--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-dm.jpg" rel="icon">
+  <link href="assets/img/pple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -463,6 +463,16 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/limp1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="BI 2"><i class="bx bx-plus"></i></a>
                 <a href="limpeza.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-BI">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/rec.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/limp1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="BI 2"><i class="bx bx-plus"></i></a>
+                <a href="recomendacao.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
